--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Ignore Directories #
 #####################
+_gsdata_
+_gsdata_/
 _gsdata_/*
 lib/*
 node_modules/*
@@ -43,3 +45,7 @@ Thumbs.db
 *.webloc
 
 passcloud alias
+
+_gsdata_/_file_state_v4._gs
+
+_gsdata_/_insync_v4.gsl
